--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,8 @@
             <version>1.0.0.Final</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.0.7.Final</version>
         </dependency>
         
         <dependency>
