--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,14 @@
         <dependency>
             <groupId>com.blazartech</groupId>
             <artifactId>BlazarCryptoFile-mvn</artifactId>
-            <version>1.0.0-RELEASE</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+
+	<dependency>
+	  <groupId>javax.xml.bind</groupId>
+	  <artifactId>jaxb-api</artifactId>
+	  <version>2.3.1</version>
+	</dependency>
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
